--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "~4.0.0"
+    "express": "~4.0.0",
+    "jade": "~1.3.1",
+    "compression": "~1.0.1",
+    "static-favicon": "~1.0.2",
+    "body-parser": "~1.0.2",
+    "node-sass": "~0.8.4",
+    "compress": "~0.1.9"
   }
 }
