--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "static-favicon": "~1.0.2",
     "body-parser": "~1.0.2",
     "node-sass": "~0.8.4",
-    "compress": "~0.1.9"
+    "compress": "~0.1.9",
+    "mongoose": "~3.8.8",
+    "express-mongoose": "~0.1.0"
   }
 }
