--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "DrownTheAve",
   "version": "0.0.0",
   "description": "The beer database, for students by students.",
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/nickclaw/DrownTheAve"
+  },
   "bugs": {
-    "url": "http://github.com/nickclaw/DrownTheAve/issues"
+      "url": "https://github.com/nickclaw/DrownTheAve/issues"
   },
   "author": {
     "name": "Nicholas Clawson",
@@ -21,6 +25,7 @@
   "scripts": {
     "start": "node app.js"
   },
+
   "dependencies": {
     "express": "~4.0.0",
     "jade": "~1.3.1",
