--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "compression": "~1.0.1",
     "static-favicon": "~1.0.2",
     "body-parser": "~1.0.2",
+    "express-session": "~1.0.2",
+    "cookie-parser": "~1.0.1",
     "node-sass": "~0.8.4",
     "compress": "~0.1.9",
     "mongoose": "~3.8.8",
     "express-mongoose": "~0.1.0",
-    "async": "~0.7.0"
+    "async": "~0.7.0",
+    "passport": "~0.2.0",
   }
 }
