--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express-mongoose": "~0.1.0",
     "async": "~0.7.0",
     "passport": "~0.2.0",
-    "passport-local": "~1.0.0"
+    "passport-local": "~1.0.0",
+    "bcrypt": "~0.7.7"
   }
 }
