--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "async": "~0.7.0",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
-    "bcrypt": "~0.7.7"
+    "bcrypt": "~0.7.7",
+    "passport-google": "~0.3.0"
   }
 }
