--- a/package.json
+++ b/package.json
@@ -27,20 +27,20 @@
   },
   "dependencies": {
     "express": "~4.0.0",
-    "jade": "~1.3.1",
-    "compression": "~1.0.1",
-    "static-favicon": "~1.0.2",
+    "async": "~0.7.0",
+    "bcrypt": "~0.7.7",
     "body-parser": "~1.0.2",
-    "express-session": "~1.0.2",
     "cookie-parser": "~1.0.1",
+    "cookie-session": "~1.0.1",
+    "express-session": "~1.0.2",
     "node-sass": "~0.8.4",
-    "compress": "~0.1.9",
+    "jade": "~1.3.1",
+    "static-favicon": "~1.0.2",
+    "compression": "~1.0.1",
     "mongoose": "~3.8.8",
     "express-mongoose": "~0.1.0",
-    "async": "~0.7.0",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
-    "bcrypt": "~0.7.7",
     "passport-google": "~0.3.0"
   }
 }
