--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express-mongoose": "~0.1.0",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
-    "passport-google": "~0.3.0"
+    "passport-google": "~0.3.0",
+    "passport-facebook": "~1.0.3"
   }
 }
