--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
     "passport-google": "~0.3.0",
-    "passport-facebook": "~1.0.3"
+    "passport-facebook": "~1.0.3",
+    "mongoose-timestamp": "~0.2.1"
   }
 }
