--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular": "~1.3.2",
     "angular-resource": "~1.3.2",
     "angular-material": "~0.5.1",
-    "angular-route": "~1.3.2"
+    "angular-route": "~1.3.2",
+    "bluebird": "~2.3.11"
   },
   "resolutions": {
     "angular": "1.3.2"
