--- a/package.json
+++ b/package.json
@@ -23,28 +23,29 @@
   ],
   "private": true,
   "scripts": {
-    "start": "node app.js",
+    "start": "node --harmony index.js",
     "populate": "node populate.js"
   },
   "dependencies": {
     "async": "~0.7.0",
     "bcrypt": "^0.8.0",
     "bluebird": "^2.3.11",
-    "body-parser": "~1.0.2",
-    "compression": "~1.0.1",
-    "cookie-parser": "~1.0.1",
-    "cookie-session": "~1.0.1",
-    "express": "~4.0.0",
-    "express-mongoose": "~0.1.0",
-    "express-session": "~1.0.2",
-    "jade": "~1.3.1",
+    "koa": "^0.13.0",
+    "koa-body": "^0.4.0",
+    "koa-compose": "^2.3.0",
+    "koa-compress": "^1.0.8",
+    "koa-favicon": "^1.2.0",
+    "koa-mount": "^1.3.0",
+    "koa-passport": "^1.1.3",
+    "koa-router": "^3.6.0",
+    "koa-session": "^2.0.0",
+    "koa-static": "^1.4.7",
+    "lodash": "^2.4.1",
     "mongoose": "~3.8.8",
     "mongoose-timestamp": "~0.2.1",
-    "node-sass-middleware": "^0.4.0",
     "passport": "~0.2.0",
     "passport-facebook": "~1.0.3",
     "passport-google": "~0.3.0",
-    "passport-local": "~1.0.0",
-    "static-favicon": "~1.0.2"
+    "passport-local": "~1.0.0"
   }
 }
