--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "^2.4.1",
     "mongoose": "~3.8.8",
     "mongoose-timestamp": "~0.2.1",
+    "node-sass": "^1.2.2",
     "passport": "~0.2.0",
     "passport-facebook": "~1.0.3",
     "passport-google": "~0.3.0",
